--- a/environments/environments.yml
+++ b/environments/environments.yml
@@ -5,27 +5,54 @@ qa1:
   example_site: www.testevolve.co.uk
   wikipedia_site: https://en.wikipedia.org/wiki/Main_Page
 
-RMS_sandbox:
+OPO_Sandbox:
   bws_url: http://opomomapp01:15102/olr-fusion-retail-express/faces/login.jsf
-  bws_buyer: admin
+  bws_admin_user: admin
+  bws_admin_pw: Welcome123
+  bws_ba_user: BA_USER_TEST01
+  bws_ba_pw: Welcome123
+  bws_buyer_user: BUYER_USER_TEST01
   bws_buyer_pw: Welcome123
-
-  url: http://opomomapp03:11002/Rms/faces/RmsLogin
-  #url: http://opomomapp01:11002/Rms/faces/RmsLogin
-  user: RMS_ADMIN
-  pw: Welcome123
+  bws_planer_user: PLANNER_USER_TEST01
+  bws_planer_pw: Welcome123
+  rms_url: http://opomomapp01:11002/Rms/faces/RmsLogin
+  rms_user: RMS_ADMIN
+  rms_pw: Welcome123
   db_hostname: 192.168.112.71
   db_port: 1521
   db_servicename: pdbmom
   db_username: rms
-
-  db_bws_username: oao #swingtag
-  db_password: Welcome123 #swingtag
+  db_password: Welcome123
   env_timeout: 30
   test_data_file: data.yml
   db_server: OPOMOMDB01
   unix_username: oretail
   unix_pwd: welcome
+
+RegTST:
+  bws_url: http://opomomapp03:15102/olr-fusion-retail-express/faces/login.jsf
+  bws_admin_user: admin
+  bws_admin_pw: Welcome123
+  bws_ba_user: BA_USER_TEST01
+  bws_ba_pw: Welcome123
+  bws_buyer_user: BUYER_USER_TEST01
+  bws_buyer_pw: Welcome123
+  bws_planer_user: PLANNER_USER_TEST01
+  bws_planer_pw: Welcome123
+  rms_url: http://opomomapp03:11002/Rms/faces/RmsLogin
+  rms_user: RMS_ADMIN
+  rms_pw: Welcome123
+  db_hostname: opomomdb03
+  db_port: 1521
+  db_servicename: pdbmom
+  db_username: rms
+  db_bws_username: oao
+  db_password: Welcome123
+  env_timeout: 30
+  test_data_file: data.yml
+  db_server: 192.168.112.32
+  unix_username: oretail
+  unix_pwd: qjedYxLCBY
 
 
 
