--- a/default_config/browser.yml
+++ b/default_config/browser.yml
@@ -7,7 +7,7 @@ implicit_wait: 30
 page_load_timeout: 30
 
 same_browser: true
-close_browser: false
+close_browser: true
 clear_cookies: true
 
 local:
